<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:textColor="#ffff"
        android:textAlignment="center"
        android:textSize="20dp"

        android:background="@color/colorPrimary"
        android:text="@string/appTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#F5FFFA"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/recordsTitle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black_dark"
            android:text="@string/oldRecords" />
        <TextView
            android:id="@+id/recordsCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black_dark"
            android:textStyle="bold"/>
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:listSelector="@drawable/selected_colours"
        android:scrollbars="vertical"
        android:background="#F0FFFF"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/appTitle"
        android:layout_marginTop="30dp">

    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#F5FFFA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <EditText
                    android:layout_width="0dp"
                    android:id="@+id/RName"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:hint="@string/Name"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:id="@+id/RDate"
                    android:hint="@string/Date"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/Chest"
                    android:layout_weight="1"
                    android:id="@+id/RChest" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/Neck"
                    android:layout_weight="1"
                    android:id="@+id/RNeck"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/Bust"
                    android:layout_weight="1"
                    android:id="@+id/RBust" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/Waist"
                    android:layout_weight="1"
                    android:id="@+id/RWaist"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/Hip"
                    android:layout_weight="1"
                    android:id="@+id/RHip"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/Inseam"
                    android:layout_weight="1"
                    android:id="@+id/RInseam"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:hint="@string/Comment"
                    android:layout_weight="1"
                    android:id="@+id/RComment"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Create" />
            <Button
                android:id="@+id/update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Update"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delete" />
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>